--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
     "name": "test-node",
     "version": "1.0.0",
-    "description": "",
+    "description": "test node application",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index.js"
+        "build": "cross-env NODE_ENV=production node index.js",
+        "dev": "cross-env NODE_ENV=development nodemon index.js"
     },
-    "author": "kr",
-    "license": "ISC",
+    "author": "kravindranath",
+    "license": "MIT",
     "dependencies": {
+        "cross-env": "^7.0.3",
         "express": "^4.18.2",
         "process": "^0.11.10"
     },
     "engines": {
         "npm": ">=9.0.0",
         "node": ">=18.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.7"
     }
 }
