update dco with better check
Signed-off-by: Ravindranath K <ravindranath.k@gmail.com>

--- a/.github/workflows/.dco.yml
+++ b/.github/workflows/.dco.yml
@@ -25,3 +25,5 @@ jobs:
 
       - name: Run DCO check
         run: dco-check --verbose
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
